gitops/unused_ntfy/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-push-cloud-buc-sh
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    namespace: external-gateway
    sectionName: hidden
  hostnames:
  - "push.cloud.buc.sh"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: ntfy
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
