gitops/unused_ntfy/ntfy-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  replicas: 0
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
      - name: ntfy
        image: binwiederhier/ntfy
        args: ["serve"]
        resources:
          requests:
            cpu: 5m
            memory: 64Mi
          limits:
            memory: "128Mi"
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8081
          name: metrics
        startupProbe:
          exec:
            command:
            - sh
            - /etc/ntfy/initScript.sh
        livenessProbe:
          httpGet:
            port: 8080
            path: /v1/health
        readinessProbe:
          httpGet:
            port: 8080
            path: /v1/health
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: config
          mountPath: "/etc/ntfy"
          readOnly: true
        - name: cache
          mountPath: "/var/cache/ntfy"
        - name: data
          mountPath: "/var/lib/ntfy"
      volumes:
        - name: config
          configMap:
            name: ntfy
        - name: cache
          persistentVolumeClaim:
            claimName: ntfy-cache
        - name: data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  selector:
    app: ntfy
  ports:
  - name: http
    port: 8080
    targetPort: http
  - name: metrics
    port: 8081
    targetPort: metrics

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy-tls
spec:
  tls:
  - hosts:
      - push.buc.sh
    secretName: cert-push-buc-sh
  rules:
  - host: "push.buc.sh"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: ntfy
            port:
              name: http


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
spec:
  rules:
  - host: push.10.0.0.21.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ntfy
            port:
              name: http

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ntfy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  policyTypes:
    - Ingress
    - Egress
  ingress:
  # Allow Ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: external-gateway
    ports:
    - protocol: TCP
      port: 8080
  # Allow monitoring
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    ports:
    - protocol: TCP
      port: 8081
